--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</main>
 	<footer>
 	
-		<p>&copy;2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy;Jessica Vecchio, 2022</p>
 		
 	</footer>
 </body>
